--- a/src/pages/blog/2018-09-04-jsconf-2018-recap.md
+++ b/src/pages/blog/2018-09-04-jsconf-2018-recap.md
@@ -3,7 +3,10 @@ templateKey: blog-post
 title: JSConf 2018 Recap
 date: 2018-09-04 20:20 UTC
 author: "Robert DeLuca"
-tags: conferences, jsconf, recap
+tags: 
+  - conferences
+  - jsconf
+  - recap
 description: "JSConfUS is back after a three-year hiatus and Robert
 had the chance to attend. He covers his favorite talks he saw while there!"
 image: /blog/2018/09/04/jsconf-2018-recap/js-conf-recap.jpg
