--- a/src/pages/blog/2018-09-04-jsconf-2018-recap.md
+++ b/src/pages/blog/2018-09-04-jsconf-2018-recap.md
@@ -2,6 +2,7 @@
 templateKey: blog-post
 title: JSConf 2018 Recap
 date: 2018-08-05T00:00:00.000Z
+author: Robert DeLuca
 description: >-
   JSConfUS is back after a three-year hiatus and Robert had the chance to
   attend. He covers his favorite talks he saw while there!
@@ -9,6 +10,7 @@ tags:
   - conferences
   - jsconf
   - recap
+image: /img/2018/09/04/jsconf-2018-recap/js-conf-recap.jpg
 ---
 
 JSConfUS has officially made a come back after [a three-year
