Add image arg for layout comp for metadata
Switch all blog post markdowns from 'image' to 'img'
Use default Frontside logo if image argument is null
Download and store some posts' images locally (some were links)
Blog post component queries low res of img arg to pass into helmet

--- a/src/pages/blog/2018-09-04-jsconf-2018-recap.md
+++ b/src/pages/blog/2018-09-04-jsconf-2018-recap.md
@@ -10,7 +10,7 @@ tags:
   - conferences
   - jsconf
   - recap
-image: /img/2018/09/04/jsconf-2018-recap/js-conf-recap.jpg
+img: /img/2018-09-04-jsconf-2018-recap_js-conf-recap.jpg
 ---
 
 JSConfUS has officially made a come back after [a three-year
