Add description and final paragraph

--- a/src/blog/2022-10-10-.md
+++ b/src/blog/2022-10-10-.md
@@ -5,7 +5,7 @@ title: >-
 date: 2022-10-10T05:00:00.000Z
 author: Min Kim, Taras Mankovski
 description: >-
-  // 🚨
+  In this post we outline a developer-friendly adoption strategy for the Backstage Software Catalog
 tags:
   - backstage
   - sourcegraph
@@ -88,7 +88,7 @@ spec:
 Now, we can use the generated `components.yaml` file with a static location to ingest all of these components into Backstage. To make this file available to your Backstage instance, you could commit this file to a repository and reference the URL of the file for your catalog location:
 
 ```yaml
-// app-config.yaml
+# app-config.yaml
   catalog:
     locations:
       - type: url
@@ -99,7 +99,7 @@ Backstage will read this file and create a component for each YAML document in y
 
 This approach can be an easy and quick way to populate your catalog. You could even automate updating the catalog by creating a GitHub Actions workflow that will trigger on a cron to rerun this script and push the updated file into the repository. Bootstrapping the catalog with a multi-document YAML file generated from a script works well as a proof of concept, but it becomes inconvenient when you have users who want to manage the metadata of their catalog components.
 
-## Using Batch Changes to open pull-requests
+## Using Sourcegraph to open pull requests
 
 Backstage Software catalog is designed to empower developers to own the metadata of the components they use. It provides a GitOps-friendly way of pulling component metadata from repositories into the catalog’s database. Information like the component's name, owner, type, and other metadata can be described via the `catalog-info.yaml` file. Developers can edit this file in their repository and Backstage will automatically read the changed file to update the metadata in the database.
 
@@ -159,6 +159,7 @@ changesetTemplate:
   body: |
     This is a scaffold to add this repo to the Backstage service catalog.
     It's recommended to add configuration details ([example](https://github.com/backstage/backstage/blob/master/catalog-info.yaml)), but you can also merge this changeset as is.
+    Once this pull request is merged, please register your component in [Backstage](https://<your-backstage-app-URL>/catalog-import).
   branch: add-catalog-info
   commit:
     message: Add repo to Backstage service catalog
@@ -173,8 +174,8 @@ We use a few utilities to keep things clean:
 
 Running this spec in Sourcegraph Batch Changes will create pull requests to add a `catalog-info.yaml` to all the repositories matching the search query. You can keep track to ensure those pull requests get merged from the Sourcegraph dashboard.
 
-<!-- 🚨 section about github discovery processor, need to update app-config to use the processor instead of the url -->
+Lastly, once a pull request is merged to introduce `catalog-info.yaml`, a developer must then go register the component. One way a component can be manually registered is by going directly to `https://<my-backstage-app-URL>/catalog-import`:
 
-# What's Next
+![backstage-register-component-screenshot](/img/2022-10-13-register-component.png)
 
-<!-- summarize what we did here and mention previous blogpost about using an entity provider instead of a github discovery processor. give sneak peak of what to expect from the next blogpost -->
+In the next blog post, we will go over how the component registration can be fully automated by creating a Backstage entity provider with Sourcegraph's `Code Search` and `Code Monitoring`.
